test/libyul/yulSyntaxTests/invalid/invalid_octal_number.yul
{
    let x := 0100
}
// ----
// ParserError 1465: (15-16): Illegal token: Octal numbers not allowed.
